--- a/gulp-less-project-structure/public/assets/css/main.css
+++ b/gulp-less-project-structure/public/assets/css/main.css
@@ -1,17 +1,2 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI';
-}
-body {
-  background-color: #263238;
-}
-h1 {
-  color: #ffffff;
-}
-.box {
-  height: 200px;
-  width: 200px;
-  margin-top: 3em;
-  background-color: #dce3e7;
-}
+*{margin:0;padding:0;font-family:'Segoe UI'}body{background-color:#263238}h1{color:#fff}.box{height:200px;width:200px;margin-top:3em;background-color:#dce3e7}a{animation:1s}
+/*# sourceMappingURL=main.css.map */
